--- a/docs/Instructor_manual.adoc
+++ b/docs/Instructor_manual.adoc
@@ -4,7 +4,7 @@ Agenda
 
 1. Welcome participants etc.
 2. Verify everybody followed the instructions and has the app running, REPL connected, Fulcro Inspect open
-3. Present link:./INTRO.md[INTRO] (which starts with the workshop agenda)
+3. Present link:./INTRO.md[INTRO] or link:./INTRO-non-clojurians.md[INTRO-non-clojurians] (which starts with the workshop agenda)
 4. Post to the chat:
 +
 > Here are two links you will need to have opened https://github.com/holyjak/fulcro-intro-wshop/blob/main/docs/INTRO.md and  https://github.com/holyjak/fulcro-intro-wshop/blob/main/docs/Workshop.adoc
