--- a/docs/Workshop.adoc
+++ b/docs/Workshop.adoc
@@ -20,7 +20,7 @@ Start by http://localhost:8181[opening the application] in the browser and openi
 
 Make sure that Calva is connected to the REPL, with the server started, as described in https://github.com/holyjak/fulcro-intro-wshop/blob/main/README.md#running-the-app-from-vs-code-with-calva[Readme: Running the app from VS Code with Calva].
 
-TIP: Read this rendered, for example by looking at in the browser: https://github.com/holyjak/fulcro-intro-wshop/blob/main/docs/Workshop.adoc
+TIP: Read this rendered, for example by looking at it in the browser: https://github.com/holyjak/fulcro-intro-wshop/blob/main/docs/Workshop.adoc
 
 #### Recommended window layout
 
@@ -39,7 +39,7 @@ image::./images/fulcro-wshop-screen-setup.png["screen layout"]
 
 BEWARE: Open the browser Dev Tools _after_ the application loaded - otherwise the React and Fulcro Inspect tabs might not show up there.
 
-(You do not need to see the Zoom window during the exercises.)
+(Online workshops: You do not need to see the Zoom window during the exercises.)
 
 [#exercises]
 ### Exercise instructions
